PyMaker/datas/object2/RawHTML/Python_DOC_referPages.script-works-in-shell-but-not-as-idle-file.txt
<div class="post-text" itemprop="text">
<p>When the following code is executed line by line on shell, it is giving the expected output : </p>
<pre><code>&gt;&gt;&gt; name=input("Please give your full name : ")
Please give your full name : ins vikranth
&gt;&gt;&gt; ListName=name.split(' ')
&gt;&gt;&gt; outputString=ListName[1]+' '+ListName[0]
&gt;&gt;&gt; print(outputString)
vikranth ins
</code></pre>
<p>The code is not running in total as a file but runs line by line on the shell. 
The code is :</p>
<pre><code>name=input("Please give your full name : ")
ListName=name.split(' ')
outputString=ListName[1]+' '+ListName[0]
print(outputString)
</code></pre>
<p>The error message is :</p>
<pre><code>Please give your full name : ins vikranth
Traceback (most recent call last):
  File "ReverseName.py", line 1, in &lt;module&gt;
    name=input("Please give your full name
  File "&lt;string&gt;", line 1
    ins vikranth
               ^
SyntaxError: unexpected EOF while parsing
</code></pre>
<p>Why is this happening?</p>
</div>
<div class="post-text" itemprop="text">
<p>the reason why this is happening is your python version ... your IDLE is <code>python 3.X</code> while your file is being "translated" ( Interpret ) using <code>python 2.X</code> ... so there are 2 simple solutions:</p>
<p>1/ stick with <code>python 3.X</code> - your code is not going to change, just change Interpreter</p>
<p>2/ edit it to be compatible with <code>python 2.X</code> :</p>
<pre><code>name=raw_input("Please give your full name : ")
</code></pre>
<p>also here are 2 online compilers, where you can see the difference:</p>
<p>Python 3.7 -&gt; <a href="https://www.onlinegdb.com/online_python_compiler" rel="nofollow noreferrer">https://www.onlinegdb.com/online_python_compiler</a></p>
<p>Python 2.7 -&gt; <a href="https://repl.it/languages/python" rel="nofollow noreferrer">https://repl.it/languages/python</a></p>
</div>
<div class="post-text" itemprop="text">
<p>@Babu brother code seems to okey for me but you might forget somepoint.If person have a middle name it will cause an error. You have 2 array locations when user types more than 2 words it cause an unexpected end of file due to lack of location like Kevin Prince Boateng a footballer. You might want to look  this <a href="https://docs.python.org/2/c-api/memory.html" rel="nofollow noreferrer">https://docs.python.org/2/c-api/memory.html</a> for a dynamical memory management</p>
</div>
<span class="comment-copy">Your code works for me (Python 3.7.2), without error. How are you running the file <code>ReverseName.py</code>?</span>
<span class="comment-copy">Well, I might be missing something, but it is not reproductible on my side, how do you launch it?</span>
<span class="comment-copy"><code>unexpected EOF while parsing</code> means there is a string that is not quoted properly. Are you not missing a <code>"</code> on the <code>input()</code> row ?</span>
<span class="comment-copy">@adrianus I ran the program as $python ReverseName.py and got the error. This time I tried $python3 Reversename.py and everything went fine.</span>
<span class="comment-copy">Python does not compile</span>
<span class="comment-copy">i know ... I just wasnt sure how to write it ... thts why i put it in a " "</span>
<span class="comment-copy">edited :) I hope i wrote it good</span>
<span class="comment-copy">I think <code>interpreted</code> is fine :)</span>
<span class="comment-copy">@StyleZ pease let me know how can I update my interpreter to 3.x as is the shell.</span>
<span class="comment-copy">my code is accepting 4 words and giving output as expected.                                                $Please give your full name : abc pqr xyz lmn&gt;&gt; lmn xyz xyz abc</span>
<span class="comment-copy">name=input("Please give your full name : ") ListName=name.split(' ') outputString=ListName[3]+' '+ListName[2]+' '+ListName[2]+' '+ListName[0] print(outputString) @A.Toraman</span>
